k8s/customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers
  template:
    metadata:
      labels:
        app: customers
    spec:
      containers:
        - name: customers
          image: customer-service
          imagePullPolicy: Never
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: customers-srv
spec:
  type: ClusterIP
  selector:
    app: customers
  ports:
    - name: http
      port: 3000
      targetPort: 3000
