k8s/inventory-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: inventory-service
          imagePullPolicy: Never
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-srv
spec:
  type: ClusterIP
  selector:
    app: inventory
  ports:
    - name: http
      port: 3000
      targetPort: 3000
