k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    # - host: example.dev
    - http:
        paths:
          - path: /api/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: customers-srv
                port:
                  number: 3000
          - path: /api/product/?(.*)
            pathType: Prefix
            backend:
              service:
                name: inventory-srv
                port:
                  number: 3000
